renamed user default brand on nad

--- a/config/nad_11.yaml
+++ b/config/nad_11.yaml
@@ -2,7 +2,7 @@
 #
 # Crowdin configuration file for Komodo OS
 #
-# Copyright (C) 2020 Komodo OS Rom
+# Copyright (C) 2021 Nusantara Project
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
