rename path of Settings rom

--- a/config/nad_11.yaml
+++ b/config/nad_11.yaml
@@ -56,8 +56,8 @@ files:
     translation: '/%original_path%-%android_code%/%original_file_name%'
     languages_mapping: *anchor
 
-# Komodo Settings
+# Nusantara Wings
   -
-    source:      '/packages/apps/KomodoSettings/res/values/nad_strings.xml'
+    source:      '/packages/apps/NusantaraWings/res/values/nad_strings.xml'
     translation: '/%original_path%-%android_code%/%original_file_name%'
     languages_mapping: *anchor
